# visualisation-with-LLM

./: .env  .gitignore  LICENSE  README.md  app.py  app_old.py  main.py  pyproject.toml  requirements.txt  test_dataset.py
.streamlit/: config.toml
src/visualisation_with_llm/: app.html  config.py  data_loader.py  dataset_summary.py  llm_utils.py  pre-process.py  viz_utils.py
templates/: index.html  index_old.html  style.css
