[project]
name = "visualisation-with-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "fatmachahed",email = "fachahed@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "visualisation_with_llm", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
